--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	compile group: 'com.google.api.grpc', name: 'proto-google-cloud-vision-v1p3beta1', version: '0.82.3'
 
 	compile 'com.google.cloud:google-cloud-vision:1.99.3'
+	
+	compile 'com.google.cloud:google-cloud-translate:1.95.0'
 }
 
 
