--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 	compile 'com.google.cloud:google-cloud-vision:1.99.3'
 	
 	compile 'com.google.cloud:google-cloud-translate:1.95.0'
+	
+    // https://mvnrepository.com/artifact/com.github.sarxos/webcam-capture
+	compile group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.12'
 		
 	
 }
